@@ -540,6 +540,9 @@ Bug fixes
 * LUCENE-3412: SloppyPhraseScorer was returning non-deterministic results 
   for queries with many repeats (Doron Cohen)
 
+* LUCENE-3421: PayloadTermQuery's explain was wrong when includeSpanScore=false.
+  (Edward Drapkin via Robert Muir)
+
 ======================= Lucene 3.4.0 =======================
 
 Bug fixes
